--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": "^5.6.0 || ^7.0.0",
         "ext-libsodium": "^1.0.2"
     },
+    "require-dev": {
+        "behat/behat": "~3.0"
+    },
     "autoload": {
         "psr-4": {
             "ParagonIE\\Halite\\": "src"
@@ -17,5 +20,8 @@
             "name": "Paragon Initiative Enterprises",
             "email": "info@paragonie.com"
         }
-    ]
+    ],
+    "config": {
+        "bin-dir": "bin/"
+    }
 }
